[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/new/wall3.png" type="Texture" id=1]
[ext_resource path="res://Shield/Shield.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.1729, 2.53711 )

[node name="Shield" type="StaticBody2D" groups=[
"shield",
]]
collision_mask = 63
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.00191879, -0.121515 )
scale = Vector2( 2.50819, 0.150559 )
texture = ExtResource( 1 )

[node name="ShieldCooldown" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="ShieldDuration" type="Timer" parent="." groups=[
"shield",
]]
one_shot = true
[connection signal="timeout" from="ShieldCooldown" to="." method="_on_ShieldCooldown_timeout"]
[connection signal="timeout" from="ShieldDuration" to="." method="_on_ShieldDuration_timeout"]
